Fixed scrollbar

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -204,7 +204,7 @@
 
 	#main-wrapper
 	{
-		padding: 4em 0 4em 0;
+		padding: 0.2em 0 4em 0;
 	}
 
 	#footer-wrapper
